# dicer

./: .bazelrc  .gitignore  CONTRIBUTING.md  MODULE.bazel  NOTICE.md  README.md
dicer/: BUILD.bazel
dicer/assigner/: BUILD.bazel
dicer/assigner/algorithm/: BUILD.bazel
dicer/assigner/config/: BUILD.bazel
dicer/assigner/proto/: BUILD.bazel  preferred_assigner.proto
dicer/assigner/src/: Assigner.scala  AssignerInfo.scala  AssignerMain.scala  AssignerProtoLogger.scala  AssignerSlicez.scala  AssignmentGenerator.scala  AssignmentGeneratorDriver.scala  AssignmentStats.scala  DicerTeeEvent.scala  DicerTeeEventEmitter.scala  DisabledPreferredAssignerDriver.scala  EtcdPreferredAssignerDriver.scala  EtcdPreferredAssignerStateMachine.scala  EtcdPreferredAssignerStore.scala  EtcdPreferredAssignerStoreStateMachine.scala  EtcdStore.scala  EtcdStoreStateMachine.scala  FakeKubernetesTargetWatcherFactory.scala  HealthWatcher.scala  InMemoryStore.scala  KeyOfDeathDetector.scala  KubernetesTargetWatcher.scala  LoadWatcher.scala  PreferredAssignerDriver.scala  PreferredAssignerMetrics.scala  PreferredAssignerServerHelper.scala  PreferredAssignerValue.scala  ShadowEtcdStore.scala  Store.scala  SubscriberManager.scala  TargetMetrics.scala
dicer/assigner/test/: AssignerGeneratorGCSuite.scala  AssignerHeartbeatSuite.scala  AssignerMainNoPodIpThrowsSuite.scala  AssignerMainNoPodUidThrowsSuite.scala  AssignerMainSuite.scala  AssignerRpcTestHelper.scala  AssignerSlicezSuite.scala  AssignerSuite.scala  AssignmentGeneratorSuite.scala  AssignmentStatsSuite.scala  CommonStoreSuiteBase.scala  DisabledPreferredAssignerDriverSuite.scala  EtcdAssignerSuite.scala  EtcdPreferredAssignerDriverSuite.scala  EtcdPreferredAssignerIntegrationSuite.scala  EtcdPreferredAssignerStateMachineSuite.scala  EtcdPreferredAssignerStoreStateMachineSuite.scala  EtcdPreferredAssignerStoreSuite.scala  EtcdStoreSuite.scala  HealthWatcherSuite.scala  InMemoryStoreSuite.scala  InterposingEtcdPreferredAssignerDriver.scala  InterposingEtcdPreferredAssignerStore.scala  KeyOfDeathDetectorSuite.scala  LoadWatcherSuite.scala  MigrationTestAssignment.scala  MigrationTestAssignmentSuite.scala  MultipleAssignerInstancesSuite.scala  PreferredAssignerTestHelper.scala  PreferredAssignerValueSuite.scala  ShadowEtcdStoreSuite.scala  SubscriberManagerSuite.scala  TargetMetricsSuite.scala  TargetMetricsUtils.scala  TestableDicerAssignerConf.scala
dicer/client/: BUILD.bazel
dicer/client/src/: AssignmentSyncStateMachine.scala  ClerkImpl.scala  ClientMetrics.scala  ClientSlicez.scala  DicerClientProtoLogger.scala  InternalClientConfig.scala  Ports.scala  ResourceRouter.scala  SliceLookup.scala  SliceletImpl.scala  SliceletLoadAccumulator.scala  SliceletMetrics.scala  WatchAddressHelper.scala  WatchStubHelper.scala
dicer/client/test/: AssignmentSyncStateMachineSuite.scala  ClerkImplSuite.scala  ClientSlicezSuite.scala  InternalClientConfigSuite.scala  ScalaSliceLookupSuite.scala  ScalaSliceLookupSuiteBase.scala  SliceLookupDriver.scala  SliceLookupSuiteBase.scala  SliceletLoadAccumulatorSuite.scala  TestClientUtils.scala  TopKeysSuite.scala  WatchAddressHelperSuite.scala
dicer/common/: BUILD.bazel
dicer/common/proto/: BUILD.bazel  advanced_target_config.proto  common.proto
dicer/common/src/: Assignment.scala  AssignmentFormatter.scala  ClientRequest.scala  ClientType.scala  CommonSlicez.scala  CommonSslConf.scala  DiffAssignment.scala  EtcdBootstrapper.scala  EtcdClientHelper.scala  Generation.scala  InternalClientConf.scala  LoadMeasurement.scala  ProposedAssignment.scala  SliceAssignment.scala  SliceHelper.scala  SliceKeyHelper.scala  SliceMapHelper.scala  SliceSetImpl.scala  SlicezKeyTracker.scala  Squid.scala  SubscriberHandler.scala  SubsliceAnnotation.scala  SubsliceAnnotationsMap.scala  TargetHelper.scala  TargetUnmarshaller.scala  Transfer.scala  Version.scala  WatchServerConf.scala  WatchServerHelper.scala  ZPageHelpers.scala
dicer/common/test/: AppTargetSuite.scala  AssignmentFormatterSuite.scala  AssignmentSuite.scala  ClientRequestSuite.scala  ClientTypeSuite.scala  CommonSlicezSuite.scala  DiffAssignmentSuite.scala  EtcdBootstrapperSuite.scala  EtcdClientHelperSuite.scala  GenerationSuite.scala  GossipSuite.scala  InterceptableStore.scala  InternalDicerTestEnvFakeClockSuite.scala  InternalDicerTestEnvironment.scala  InternalDicerTestEnvironmentSuite.scala  ProposedAssignmentSuite.scala  ResourceAddressSuite.scala  ScalaSubscriberHandlerSuite.scala  SliceAssignmentSuite.scala  SliceKeySuite.scala  SliceSetSuite.scala  SliceSuite.scala  SlicezKeyTrackerSuite.scala  SlicezSuite.scala  SquidSuite.scala  SubscriberHandlerDriver.scala  SubscriberHandlerMetricUtils.scala  SubscriberHandlerSuite.scala  SubscriberHandlerSuiteBase.scala  SubsliceAnnotationSuite.scala  SubsliceAnnotationsMapSuite.scala  TargetHelperSuite.scala  TargetSuite.scala  TargetUnmarshallerSuite.scala  TestAssigner.scala  TestEnvironmentMain.scala  TestEnvironmentMainSuite.scala  TestSliceUtils.scala  TestSliceUtilsSuite.scala  TransferSuite.scala  (+1 more)
dicer/demo/: BUILD.bazel  README.md
dicer/demo/proto/: BUILD.bazel  demo.proto
dicer/demo/scripts/: cleanup.sh  generate-certs.sh  install_amd64.sh  setup.sh
dicer/friend/: BUILD.bazel
dicer/friend/proto/: BUILD.bazel  friend.proto
dicer/friend/src/: MutableSliceMap.scala  ShutdownHookConstants.scala  SliceMap.scala  SliceWithStateProvider.scala  SliceletAccessor.scala
dicer/friend/test/: BUILD.bazel  MutableSliceMapSuite.scala  SliceMapSuite.scala  SliceletAccessorSuite.scala
dicer/production/assigner/: Chart.yaml  README.md  values.yaml
dicer/resources/: BUILD.bazel  log4j2.xml
wrappers/deployment/: BUILD.bazel
wrappers/deployment/src/: InfraDataModel.scala  KubernetesCluster.scala
wrappers/feature-flag/: BUILD.bazel
wrappers/feature-flag/src/: BaseDynamicConf.scala  DynamicConf.scala  FeatureFlagDefinition.scala  MockFeatureFlagReader.scala  RuntimeContext.scala
wrappers/instrumentation/: BUILD.bazel
wrappers/instrumentation/src/: DebugHttpServer.scala  (+4 more)
wrappers/logging/: BUILD.bazel
(+263 files in other folders)
