load("@rules_scala//scala:scala.bzl", "scala_library")

package(
    default_visibility = ["//visibility:public"],
)

scala_library(
    name = "kubernetes_cluster",
    srcs = [
        "src/KubernetesCluster.scala",
    ],
)

scala_library(
    name = "infra_data_model_lib",
    srcs = [
        "src/InfraDataModel.scala",
    ],
    deps = [
        ":kubernetes_cluster",
    ],
)
