load("@rules_scala//scala:scala.bzl", "scala_library")

package(
    default_visibility = ["//visibility:public"],
)

scala_library(
    name = "feature-flag",
    srcs = [
        "src/BaseDynamicConf.scala",
        "src/DynamicConf.scala",
        "src/FeatureFlagDefinition.scala",
        "src/MockFeatureFlagReader.scala",
        "src/RuntimeContext.scala",
    ],
    deps = [
        "//wrappers/conf:dbconf",
    ],
)
