load("@rules_scala//scala:scala.bzl", "scala_binary", "scala_library")

package(
    default_visibility = ["//visibility:public"],
)

scala_library(
    name = "demo_server_lib",
    srcs = ["DemoServerMain.scala"],
    deps = [
        "//caching/util:prefix_logger",
        "//caching/util:server_conf",
        "//dicer/demo/proto:demo_proto",
        "//dicer/demo/src/common",
        "//dicer/external:conf",
        "//dicer/external:external_common",
        "//dicer/external:slicelet",
        "//dicer/external:slicelet_listener",
        "//wrappers/conf:core",
        "//wrappers/conf:project",
        "//wrappers/conf:project-conf",
        "//wrappers/conf:rpc-port-conf",
        "//wrappers/logging",
        "//wrappers/rpc:rpc_ssl",
        "//wrappers/rpc:rpc_tls",
        "//wrappers/util:databricks_main",
        "//wrappers/util:shutdown-hook-manager",
        "@maven//:com_github_ben_manes_caffeine_caffeine",
        "@maven//:com_github_blemale_scaffeine_2_12",
        "@maven//:com_google_guava_guava",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_binary(
    name = "demo_server_main",
    main_class = "com.databricks.dicer.demo.server.DemoServerMain",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":demo_server_lib",
        "//dicer/resources:log4j_config",
    ],
)
